Update organization descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -512,12 +512,12 @@
     </div>
     <div class="work-item">
       <div class="work-header"><span class="work-title">Angel Investor — Asano</span><span class="work-tag">Personal</span></div>
-      <div class="work-org">New York City · Hospitality</div>
+      <div class="work-org">Consumer — Food & Beverage</div>
       <p class="work-desc">Personal investment into <a href="https://www.asanocafe.com" target="_blank">Asano</a>, a café in New York City. I look for founders building things with genuine craft and a clear point of view — Asano is exactly that.</p>
     </div>
     <div class="work-item">
       <div class="work-header"><span class="work-title">Technology Sector Coverage</span><span class="work-tag">Ongoing</span></div>
-      <div class="work-org">Software, SaaS, Internet</div>
+      <div class="work-org">Technology — Software & SaaS</div>
       <p class="work-desc">Deep coverage of the technology landscape including cloud infrastructure, vertical SaaS, marketplace models, and AI-native software businesses. Tracking how secular tailwinds in software are reshaping enterprise spend and go-to-market motions.</p>
     </div>
   </section>
